# my-codespace-exampe

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.env  devcontainer.json
my_codespace_example/hello_world/: settings.py
