[tool.poetry]
name = "my-codespace-example"
version = "0.1.0"
description = ""
authors = ["Christian Hueser <55481699+christianhueserhzdr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "my_codespace_example"}]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3" 
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
